# turtle_command

./: .gitignore  Cargo.toml  output.glb  turtles0.json
backend/src/: main.rs
frontend/: component_test.html  control_test.html  front_page.html
frontend/components/: inventory_slot.css  inventory_slot.js  turtle.css  turtle.js  turtle_inventory.css  turtle_inventory.js  turtle_loader.css  turtle_loader.js
frontend/resources/style/: main.css
frontend/scripts/: click_audio.js  main.js  register_components.js
frontend/style/: index.css  main.css
lua/: fresh_installer.lua  install_manager.lua  logging.lua  move_utilities.lua  sha1.lua  thready.lua  turtle_command.lua  utilities.lua
src/: astar.rs  chunks.rs  coordinates.rs  data_extractor.rs  main.rs  turtle_data.rs
threejs/: index.html  main.js
