[package]
name = "turtle_command"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2.2"
eserde = { version = "0.1.7", features = ["json"] }
file-crawler = "0.1.5"
log = "0.4.33"
lz4_flex = "0.13.1"
minecraft-assets = "0.0.6"
pathfinding = "4.15.0"
regex = "1.13.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
sha_file_hashing = "0.1.1"
uuid = { version = "1.23.4", features = ["v4"] }
zip = "8.6.0"
zipcrawl = "2.4.0"
